# DynamicMetronome

./: .gitignore  README.md  build.gradle  gradle.properties  index.html  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/androidTest/java/thadd/schelp/dynamicmetronome/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt  Function.cpp  Instruction.cpp  Instruction.hpp  Metronome.cpp  Metronome.hpp  Program.cpp  Program.hpp  SoundPlayer.cpp  SoundPlayer.hpp  native.hpp
app/src/main/java/dynamicmetronome/activities/: CreateProgramsActivity.kt  ListProgramsActivity.kt  MainActivity.kt
app/src/main/java/dynamicmetronome/gui/: CustomAdapter.kt  ProgramListData.kt  ProgramRecyclerAdapter.kt  ProgramRecyclerModel.kt
app/src/main/java/dynamicmetronome/gui/customviews/: ProgramDisplay.kt
app/src/main/java/dynamicmetronome/mainactivity/: MainActivity.kt
app/src/main/java/dynamicmetronome/metronome/: Instruction.kt  Metronome.kt  Program.kt
app/src/main/java/thadd/schelp/dynamicmetronome/: CustomAdapter.kt  Extensions.kt  MainActivity.kt  Metronome.kt  ProgramRecyclerModel.kt
app/src/main/java/thadd/schelp/dynamicmetronome/gui/: CustomAdapter.kt  ProgramRecyclerModel.kt
app/src/main/java/thadd/schelp/dynamicmetronome/metronome/: Instruction.kt  Metronome.kt  Program.kt
app/src/main/jni/: AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt  Metronome.cpp  Metronome.hpp  native.cpp  native.hpp
app/src/main/res/layout/: activity_main.xml  activity_programs.xml  create_popup.xml  create_program.xml  create_programs_activity.xml  editor_popup.xml  list_programs_activity.xml  main_activity.xml  program_entry.xml
app/src/main/res/raw/: metronome_sample.m4a
app/src/main/res/values/: colors.xml  custom_styles.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/thadd/schelp/dynamicmetronome/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
